feat: implement role-based access control and admin dashboard ui