@@ -1,11 +1,13 @@
 package com.musify.backend.security;
 
+import com.musify.backend.entity.Role;
 import com.musify.backend.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -19,9 +21,13 @@ public class CustomUserDetails implements UserDetails {
         return user;
     }
 
+    public Role getRole() {
+        return user.getRole();
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // chưa cần phân quyền role, để trống
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
 
     @Override
